log
Sat, Apr 19, 2025  4:40:12 PM: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
eeef3b7
Sat, Apr 19, 2025  4:47:03 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
eb84acc
Sat, Apr 19, 2025  5:20:13 PM: 
 hashmap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
1faeac8
Sat, Apr 19, 2025  6:05:08 PM: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:93:20: error: implicit declaration of function 'has' [-Werror=implicit-function-declaration]
     int pocicion = has(key, map->capacity);
                    ^~~
cc1.exe: all warnings being treated as errors
e578017
Sat, Apr 19, 2025  6:05:21 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
a0535f6
Sat, Apr 19, 2025  6:10:25 PM: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
ac47af1
Sat, Apr 19, 2025  6:11:54 PM: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  11|2
total_score: 50/70
c3a2851
Sat, Apr 19, 2025  6:13:29 PM: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
45ef735
Sat, Apr 19, 2025  6:18:44 PM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
ec079aa
Sat, Apr 19, 2025  6:19:54 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  16|1
total_score: 60/70
8f5f1bf
Sat, Apr 19, 2025  6:25:19 PM: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  17|0
total_score: 70/70
699e7c6
